# FinalProject

hw4_fold/aruco_ros/aruco/src/aruco/: posetracker.cpp
hw4_fold/m-explore-ros2/map_merge/doc/: wiki_doc.txt
hw4_fold/pizzeria/: CMakeLists.txt  package.xml
hw4_fold/pizzeria/config/: RVIZ_FINAL_CONFIG.rviz  chef_controllers.yaml  explore.yaml  navigation.yaml  slam.yaml  waiter.rviz
hw4_fold/pizzeria/launch/: aruco.launch.py  deliver_pizza.launch.py  move_to_pizza.launch.py  pizzeria_world.launch.py  waiter_explore.launch.py  waiter_nav.launch.py
hw4_fold/pizzeria/maps/: pizzeria_map.pgm  pizzeria_map.yaml
hw4_fold/pizzeria/models/pizza/: model.config  model.sdf
hw4_fold/pizzeria/scripts/: chef_pose.py
hw4_fold/pizzeria/src/: chef_kdl_node.cpp  deliver_pizza_node.cpp  kdl_control.cpp  kdl_planner.cpp  kdl_robot.cpp  odom_bl_tf.cpp
hw4_fold/pizzeria/urdf/: chef funzionante.txt
hw4_fold/pizzeria/urdf/chef/: camera.xacro  chef.urdf.xacro  iiwa.urdf.xacro
hw4_fold/pizzeria/urdf/waiter/: lidar_gazebo_macro.xacro  waiter.urdf.xacro
hw4_fold/pizzeria/worlds/: pizzeria.world  pizzeria_vecchio.world
hw4_fold/ros2_fra2mo/: CMakeLists.txt
hw4_fold/ros2_fra2mo/config/: navigation.yaml
hw4_fold/ros2_fra2mo/meshes/: tunnel_long.stl  unknown_obst_wall.stl
hw4_fold/ros2_fra2mo/urdf/: fra2mo.urdf.xacro  fra2moFUNZIONANTE_VECCHIO.urdf.xacro  fra2mo_base_macro.xacro  lidar_gazebo_macro.xacro
hw4_fold/ros2_iiwa/iiwa_description/urdf/: iiwa.urdf.xacro
hw4_fold/ros2_kdl_package/: CMakeLists.txt  package.xml
hw4_fold/ros2_kdl_package/bags/bag_velocity/: metadata.yaml
hw4_fold/ros2_kdl_package/config/: camera.xacro
hw4_fold/ros2_kdl_package/src/: marker_pose_service.cpp
