<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>pizzeria</name>
  <version>0.0.1</version>
  <description>Simulazione Pizzeria in Gazebo</description>
  <maintainer email="fel.furino@studenti.unina.it">Tu</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend> <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>trajectory_msgs</depend>
  <depend>kdl_parser</depend>
  <depend>orocos_kdl</depend>
  <depend>gazebo_ros</depend>
  <exec_depend>ros2launch</exec_depend>
  <depend>ros2_control</depend>
  <depend>ros2_controllers</depend>
  <depend>ign_ros2_control</depend>
  <depend>ros_gz_interfaces</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>nav2_simple_commander</depend>
  <depend>nav_msgs</depend>
  <depend>rclcpp_action</depend>
  <depend>nav2_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
    <gazebo_ros gazebo_model_path="${prefix}/models"/>
  </export>
</package>